<resources>
    <string name="app_name">TicketApp</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_remember_me">Remember Me</string>
    <string name="hint_login">Login</string>
    <string name="hint_register">Register</string>
    <string name="hint_forgot_password">Forgot password</string>
    <string name="hint_name">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
